[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "multi_crypt"
readme = {file = "ReadMe.md", content-type = "text/markdown"}
authors = [{ name = "emendir" }]
description = "A single unified interface for working with alternative cryptographic algorithms."
version = "0.0.4"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_crypt", "multi_crypt.algorithms"]
namespaces = false
